Update bounding box
Potentially complete